--- a/index.html
+++ b/index.html
@@ -1,14 +1,77 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PSX Cracktro</title>
+    <style>
+        @font-face {
+            font-family: 'PirateFont';
+            src: url('PixelFont.ttf'); /* Usa una fuente pixelada */
+        }
+
+        body {
+            background-color: black;
+            color: #00ff00;
+            text-align: center;
+            font-family: 'PirateFont', sans-serif;
+            overflow: hidden;
+            margin: 0;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
+
+        .pirate-text {
+            font-size: 32px;
+            text-shadow: 2px 2px 0px #000, -2px -2px 0px #000;
+            border: 3px solid red;
+            padding: 15px;
+            display: inline-block;
+            animation: shake 0.1s infinite alternate, scrollText 6s linear infinite;
+        }
+
+        @keyframes shake {
+            from { transform: translateX(-2px) rotate(-1deg); }
+            to { transform: translateX(2px) rotate(1deg); }
+        }
+
+        @keyframes scrollText {
+            from { transform: translateX(100vw); }
+            to { transform: translateX(-100vw); }
+        }
+
+    </style>
 </head>
 <body>
-    
-    <marquee style="color: red; background-color: yellow;">
-        Hola mundo desde github.
-      </marquee>
+
+    <div class="pirate-text">🔥 CRACKED BY BLACK SKULL TEAM 🔥</div>
+
+    <!-- Audio local con autoplay -->
+    <audio id="audio" loop>
+        <source src="cracktro-music.mp3" type="audio/mpeg">
+        Tu navegador no soporta audio.
+    </audio>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            var audio = document.getElementById("audio");
+
+            // Intenta reproducir automáticamente
+            var playPromise = audio.play();
+
+            // Si el navegador bloquea la reproducción, espera interacción
+            if (playPromise !== undefined) {
+                playPromise.catch(function () {
+                    document.addEventListener("click", function () {
+                        audio.play();
+                    }, { once: true }); // Solo ejecutar una vez
+                });
+            }
+        });
+    </script>
+
 </body>
 </html>
