--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PSX Cracktro</title>
+    <title>TEST</title>
     <style>
         @font-face {
             font-family: 'PirateFont';
@@ -47,7 +47,7 @@
 </head>
 <body>
 
-    <div class="pirate-text">🔥 CRACKED BY BLACK SKULL TEAM 🔥</div>
+    <div class="pirate-text">🔥 TEST ULTRA TEST 🔥</div>
 
     <!-- Audio local con autoplay -->
     <audio id="audio" loop>
